@@ -1,3 +1,12 @@
+2014-05-28  Alejandro Gallardo <alejandro.gallardo@artica.es>
+	
+	* include/functions_snmp.php: Improved the security
+	on the function "snmp_generate_trap" by escaping the
+	command arguments.
+	
+	* include/functions_snmp_browser.php: Improved the
+	Windows compatibility of some commands.
+
 2014-05-28  Sergio Martin <sergio.martin@artica.es>
 
 	* godmode/agentes/configurar_agente.php: Fixed field that
